Fix logo alignment
Fixes DD 71427-305

--- a/app/design/frontend/Travers/default/Magento_Theme/styles/module/_common.scss
+++ b/app/design/frontend/Travers/default/Magento_Theme/styles/module/_common.scss
@@ -72,7 +72,7 @@ body {
             }
 
             .logo {
-                padding-left: 50px;
+                padding-left: $indent__l;
             }
 
             .quick-order-container {
@@ -82,7 +82,7 @@ body {
 
         @include min-screen($screen__l) {
             .logo {
-                padding-left: 70px;
+                padding-left: 50px;
             }
         }
     }
